# Sentinel-Dock

./: .gitignore  README.md
source/sentinx-control-center/: README.md  app.py  main.py  navigation.py  window.py
source/sentinx-control-center/backend/: __init__.py  config.py  dock.py  sentinel.py  system.py  themes.py
source/sentinx-control-center/pages/: __init__.py  about.py  ai.py  appearance.py  dashboard.py  developer.py  dock.py  panel.py  system.py
source/sentinx-control-center/resources/css/: style.css
source/sentinx-control-center/widgets/: __init__.py  card.py  header.py  searchbar.py  section.py  setting_row.py  sidebar.py
source/sentinx-dock/: config.h.in~  configure.ac  configure~
source/sentinx-dock/data/: Makefile.am  plank.appdata.xml.in  plank.desktop.in  plank.gresource.xml  sentinx-dock.appdata.xml  sentinx-dock.appdata.xml.in  sentinx-dock.desktop  sentinx-dock.desktop.in
source/sentinx-dock/data/icons/: Makefile.am
source/sentinx-dock/lib/: Makefile.am  sentinx-dock.pc.in
source/sentinx-dock/lib/Factories/: AbstractMain.vala
source/sentinx-dock/lib/Items/: PlankDockItem.vala
source/sentinx-dock/po/: POTFILES.in  am.po  ar.po  be.po  bg.po  bs.po  ca.po  ckb.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  ga.po  gd.po  gl.po  he.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  kab.po  ko.po  lt.po  lv.po  ml.po  ms.po  nb.po  ne.po  nl.po  (+24 more)
source/sentinx-dock/src/: Main.vala  Makefile.am  sentinx-dock
