pkgicon16dir = @datadir@/icons/hicolor/16x16/apps
dist_pkgicon16_DATA = 16x16/sentinx-dock.svg

pkgicon22dir = @datadir@/icons/hicolor/22x22/apps
dist_pkgicon22_DATA = 22x22/sentinx-dock.svg

pkgicon24dir = @datadir@/icons/hicolor/24x24/apps
dist_pkgicon24_DATA = 24x24/sentinx-dock.svg

pkgicon32dir = @datadir@/icons/hicolor/32x32/apps
dist_pkgicon32_DATA = 32x32/sentinx-dock.svg

pkgicon48dir = @datadir@/icons/hicolor/48x48/apps
dist_pkgicon48_DATA = 48x48/sentinx-dock.svg

pkgicon64dir = @datadir@/icons/hicolor/64x64/apps
dist_pkgicon64_DATA = 64x64/sentinx-dock.svg

pkgicon128dir = @datadir@/icons/hicolor/128x128/apps
dist_pkgicon128_DATA = 128x128/sentinx-dock.svg
